@@ -862,3 +862,10 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          IO port" flag.
 20110622 accessor.pl,snapshot.c,snap_accessors.txt,szx.c: store core W5100
          state in snapshots.
+20110811 libspectrum.h.in,libspectrum.c: add support for detecting POK files
+         (patch #3382538) (Sergio Baldoví).
+20110905 libspectrum.c,make-perl.c,myglib/garray.c: remove operations with
+         uninitialised pointers in libspectrum_make_room, at stopping RZX
+         recordings or saving snapshots (part of patch #3404090) (Sergio
+         Baldoví).
+20111106 rzx.c,szx.c: remove unused variables (thanks, gcc 4.6).
